y.output
Non-terminaux inutiles dans la grammaire

    Error


Terminaux inutilisés dans la grammaire

    tWHILE
    tIF
    tELSE
    tFOR
    tRETURN
    tGOTO
    tLABEL
    tCONST
    tINCR
    tDINCR
    tINF
    tSUP
    tVIRGULE
    tREF
    tERROR
    tNB_FLOAT


Règles inutiles dans la grammaire

   54 Error: tERROR


Règles inutiles dans l'analyseur à cause de conflits

   18 Maths: Maths tMUL Maths

   52 If: %empty

   53 For: %empty


État 1 conflits: 1 décalage/réduction
État 2 conflits: 1 décalage/réduction
État 3 conflits: 1 décalage/réduction
État 55 conflits: 6 décalage/réduction, 14 réduction/réduction
État 56 conflits: 9 décalage/réduction
État 57 conflits: 9 décalage/réduction
État 58 conflits: 9 décalage/réduction
État 59 conflits: 9 décalage/réduction
État 60 conflits: 9 décalage/réduction
État 61 conflits: 9 décalage/réduction, 11 réduction/réduction
État 62 conflits: 9 décalage/réduction
État 63 conflits: 9 décalage/réduction
État 64 conflits: 9 décalage/réduction
État 76 conflits: 7 décalage/réduction, 14 réduction/réduction


Grammaire

    0 $accept: Code $end

    1 Code: RootElem
    2     | RootElem Code

    3 RootElem: VarDec
    4         | FonctionDec

    5 Type: tINT
    6     | tFLOAT
    7     | tVOID

    8 VarDec: Type tID tEOL
    9       | Type Affectation

   10 Affectation: tID tASSIGN Operation tEOL

   11 $@1: %empty

   12 Operation: $@1 Maths

   13 Maths: tID
   14      | Maths tADD Maths
   15      | Maths tSOU Maths
   16      | Maths tMUL Maths
   17      | Maths tXOR Maths
   18      | Maths tMUL Maths
   19      | Maths tAND Maths
   20      | Maths tOR Maths
   21      | Maths tEGALEGAL Maths
   22      | Maths tLSL Maths
   23      | Maths tLSR Maths
   24      | tNB_INT

   25 Print: tPRINT tPO Maths tPF tEOL

   26 PlusEgal: tID tPLUSEGAL Maths tEOL

   27 MoinsEgal: tID tMOINSEGAL Maths tEOL

   28 FonctionDec: FonctionMainDec
   29            | FonctionIntDec
   30            | FonctionVoidDec
   31            | FonctionFloatDec

   32 $@2: %empty

   33 FonctionMainDec: tINT tMAIN tPO tPF $@2 Scope

   34 FonctionIntDec: tINT tID tPO Args tPF Scope

   35 FonctionVoidDec: tVOID tID tPO Args tPF Scope

   36 FonctionFloatDec: tFLOAT tID tPO Args tPF Scope

   37 Args: %empty

   38 $@3: %empty

   39 Scope: tAO $@3 CorpScope tAF

   40 CorpScope: CorpElem
   41          | CorpScope CorpElem

   42 CorpElem: VarDec
   43         | While
   44         | If
   45         | For
   46         | Affectation
   47         | PlusEgal
   48         | MoinsEgal
   49         | Scope
   50         | Print

   51 While: %empty

   52 If: %empty

   53 For: %empty


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tWHILE (258)
    tIF (259)
    tELSE (260)
    tFOR (261)
    tRETURN (262)
    tGOTO (263)
    tLABEL (264)
    tPRINT (265) 25
    tINT (266) 5 33 34
    tFLOAT (267) 6 36
    tVOID (268) 7 35
    tCONST (269)
    tEGALEGAL (270) 21
    tPLUSEGAL (271) 26
    tMOINSEGAL (272) 27
    tINCR (273)
    tDINCR (274)
    tLSL (275) 22
    tLSR (276) 23
    tASSIGN (277) 10
    tSOU (278) 15
    tADD (279) 14
    tMUL (280) 16 18
    tXOR (281) 17
    tAND (282) 19
    tOR (283) 20
    tINF (284)
    tSUP (285)
    tEOL (286) 8 10 25 26 27
    tVIRGULE (287)
    tREF (288)
    tMAIN (289) 33
    tPO (290) 25 33 34 35 36
    tPF (291) 25 33 34 35 36
    tAO (292) 39
    tAF (293) 39
    tERROR (294)
    tNB_INT <nb> (295) 24
    tNB_FLOAT <fnb> (296)
    tID <var> (297) 8 10 13 26 27 34 35 36


Non-terminaux, suivis des règles où ils apparaissent

    $accept (43)
        à gauche: 0
    Code (44)
        à gauche: 1 2
        à droite: 0 2
    RootElem (45)
        à gauche: 3 4
        à droite: 1 2
    Type <nb> (46)
        à gauche: 5 6 7
        à droite: 8 9
    VarDec (47)
        à gauche: 8 9
        à droite: 3 42
    Affectation <var> (48)
        à gauche: 10
        à droite: 9 46
    Operation (49)
        à gauche: 12
        à droite: 10
    $@1 (50)
        à gauche: 11
        à droite: 12
    Maths <nb> (51)
        à gauche: 13 14 15 16 17 18 19 20 21 22 23 24
        à droite: 12 14 15 16 17 18 19 20 21 22 23 25 26 27
    Print (52)
        à gauche: 25
        à droite: 50
    PlusEgal (53)
        à gauche: 26
        à droite: 47
    MoinsEgal (54)
        à gauche: 27
        à droite: 48
    FonctionDec (55)
        à gauche: 28 29 30 31
        à droite: 4
    FonctionMainDec (56)
        à gauche: 33
        à droite: 28
    $@2 (57)
        à gauche: 32
        à droite: 33
    FonctionIntDec (58)
        à gauche: 34
        à droite: 29
    FonctionVoidDec (59)
        à gauche: 35
        à droite: 30
    FonctionFloatDec (60)
        à gauche: 36
        à droite: 31
    Args (61)
        à gauche: 37
        à droite: 34 35 36
    Scope (62)
        à gauche: 39
        à droite: 33 34 35 36 49
    $@3 (63)
        à gauche: 38
        à droite: 39
    CorpScope (64)
        à gauche: 40 41
        à droite: 39 41
    CorpElem (65)
        à gauche: 42 43 44 45 46 47 48 49 50
        à droite: 40 41
    While (66)
        à gauche: 51
        à droite: 43
    If (67)
        à gauche: 52
        à droite: 44
    For (68)
        à gauche: 53
        à droite: 45


État 0

    0 $accept: . Code $end

    tINT    décalage et aller à l'état 1
    tFLOAT  décalage et aller à l'état 2
    tVOID   décalage et aller à l'état 3

    Code              aller à l'état 4
    RootElem          aller à l'état 5
    Type              aller à l'état 6
    VarDec            aller à l'état 7
    FonctionDec       aller à l'état 8
    FonctionMainDec   aller à l'état 9
    FonctionIntDec    aller à l'état 10
    FonctionVoidDec   aller à l'état 11
    FonctionFloatDec  aller à l'état 12


État 1

    5 Type: tINT .
   33 FonctionMainDec: tINT . tMAIN tPO tPF $@2 Scope
   34 FonctionIntDec: tINT . tID tPO Args tPF Scope

    tMAIN  décalage et aller à l'état 13
    tID    décalage et aller à l'état 14

    tID  [réduction par utilisation de la règle 5 (Type)]


État 2

    6 Type: tFLOAT .
   36 FonctionFloatDec: tFLOAT . tID tPO Args tPF Scope

    tID  décalage et aller à l'état 15

    tID  [réduction par utilisation de la règle 6 (Type)]


État 3

    7 Type: tVOID .
   35 FonctionVoidDec: tVOID . tID tPO Args tPF Scope

    tID  décalage et aller à l'état 16

    tID  [réduction par utilisation de la règle 7 (Type)]


État 4

    0 $accept: Code . $end

    $end  décalage et aller à l'état 17


État 5

    1 Code: RootElem .
    2     | RootElem . Code

    tINT    décalage et aller à l'état 1
    tFLOAT  décalage et aller à l'état 2
    tVOID   décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 1 (Code)

    Code              aller à l'état 18
    RootElem          aller à l'état 5
    Type              aller à l'état 6
    VarDec            aller à l'état 7
    FonctionDec       aller à l'état 8
    FonctionMainDec   aller à l'état 9
    FonctionIntDec    aller à l'état 10
    FonctionVoidDec   aller à l'état 11
    FonctionFloatDec  aller à l'état 12


État 6

    8 VarDec: Type . tID tEOL
    9       | Type . Affectation

    tID  décalage et aller à l'état 19

    Affectation  aller à l'état 20


État 7

    3 RootElem: VarDec .

    $défaut  réduction par utilisation de la règle 3 (RootElem)


État 8

    4 RootElem: FonctionDec .

    $défaut  réduction par utilisation de la règle 4 (RootElem)


État 9

   28 FonctionDec: FonctionMainDec .

    $défaut  réduction par utilisation de la règle 28 (FonctionDec)


État 10

   29 FonctionDec: FonctionIntDec .

    $défaut  réduction par utilisation de la règle 29 (FonctionDec)


État 11

   30 FonctionDec: FonctionVoidDec .

    $défaut  réduction par utilisation de la règle 30 (FonctionDec)


État 12

   31 FonctionDec: FonctionFloatDec .

    $défaut  réduction par utilisation de la règle 31 (FonctionDec)


État 13

   33 FonctionMainDec: tINT tMAIN . tPO tPF $@2 Scope

    tPO  décalage et aller à l'état 21


État 14

   34 FonctionIntDec: tINT tID . tPO Args tPF Scope

    tPO  décalage et aller à l'état 22


État 15

   36 FonctionFloatDec: tFLOAT tID . tPO Args tPF Scope

    tPO  décalage et aller à l'état 23


État 16

   35 FonctionVoidDec: tVOID tID . tPO Args tPF Scope

    tPO  décalage et aller à l'état 24


État 17

    0 $accept: Code $end .

    $défaut  accepter


État 18

    2 Code: RootElem Code .

    $défaut  réduction par utilisation de la règle 2 (Code)


État 19

    8 VarDec: Type tID . tEOL
   10 Affectation: tID . tASSIGN Operation tEOL

    tASSIGN  décalage et aller à l'état 25
    tEOL     décalage et aller à l'état 26


État 20

    9 VarDec: Type Affectation .

    $défaut  réduction par utilisation de la règle 9 (VarDec)


État 21

   33 FonctionMainDec: tINT tMAIN tPO . tPF $@2 Scope

    tPF  décalage et aller à l'état 27


État 22

   34 FonctionIntDec: tINT tID tPO . Args tPF Scope

    $défaut  réduction par utilisation de la règle 37 (Args)

    Args  aller à l'état 28


État 23

   36 FonctionFloatDec: tFLOAT tID tPO . Args tPF Scope

    $défaut  réduction par utilisation de la règle 37 (Args)

    Args  aller à l'état 29


État 24

   35 FonctionVoidDec: tVOID tID tPO . Args tPF Scope

    $défaut  réduction par utilisation de la règle 37 (Args)

    Args  aller à l'état 30


État 25

   10 Affectation: tID tASSIGN . Operation tEOL

    $défaut  réduction par utilisation de la règle 11 ($@1)

    Operation  aller à l'état 31
    $@1        aller à l'état 32


État 26

    8 VarDec: Type tID tEOL .

    $défaut  réduction par utilisation de la règle 8 (VarDec)


État 27

   33 FonctionMainDec: tINT tMAIN tPO tPF . $@2 Scope

    $défaut  réduction par utilisation de la règle 32 ($@2)

    $@2  aller à l'état 33


État 28

   34 FonctionIntDec: tINT tID tPO Args . tPF Scope

    tPF  décalage et aller à l'état 34


État 29

   36 FonctionFloatDec: tFLOAT tID tPO Args . tPF Scope

    tPF  décalage et aller à l'état 35


État 30

   35 FonctionVoidDec: tVOID tID tPO Args . tPF Scope

    tPF  décalage et aller à l'état 36


État 31

   10 Affectation: tID tASSIGN Operation . tEOL

    tEOL  décalage et aller à l'état 37


État 32

   12 Operation: $@1 . Maths

    tNB_INT  décalage et aller à l'état 38
    tID      décalage et aller à l'état 39

    Maths  aller à l'état 40


État 33

   33 FonctionMainDec: tINT tMAIN tPO tPF $@2 . Scope

    tAO  décalage et aller à l'état 41

    Scope  aller à l'état 42


État 34

   34 FonctionIntDec: tINT tID tPO Args tPF . Scope

    tAO  décalage et aller à l'état 41

    Scope  aller à l'état 43


État 35

   36 FonctionFloatDec: tFLOAT tID tPO Args tPF . Scope

    tAO  décalage et aller à l'état 41

    Scope  aller à l'état 44


État 36

   35 FonctionVoidDec: tVOID tID tPO Args tPF . Scope

    tAO  décalage et aller à l'état 41

    Scope  aller à l'état 45


État 37

   10 Affectation: tID tASSIGN Operation tEOL .

    $défaut  réduction par utilisation de la règle 10 (Affectation)


État 38

   24 Maths: tNB_INT .

    $défaut  réduction par utilisation de la règle 24 (Maths)


État 39

   13 Maths: tID .

    $défaut  réduction par utilisation de la règle 13 (Maths)


État 40

   12 Operation: $@1 Maths .
   14 Maths: Maths . tADD Maths
   15      | Maths . tSOU Maths
   16      | Maths . tMUL Maths
   17      | Maths . tXOR Maths
   18      | Maths . tMUL Maths
   19      | Maths . tAND Maths
   20      | Maths . tOR Maths
   21      | Maths . tEGALEGAL Maths
   22      | Maths . tLSL Maths
   23      | Maths . tLSR Maths

    tEGALEGAL  décalage et aller à l'état 46
    tLSL       décalage et aller à l'état 47
    tLSR       décalage et aller à l'état 48
    tSOU       décalage et aller à l'état 49
    tADD       décalage et aller à l'état 50
    tMUL       décalage et aller à l'état 51
    tXOR       décalage et aller à l'état 52
    tAND       décalage et aller à l'état 53
    tOR        décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 12 (Operation)


État 41

   39 Scope: tAO . $@3 CorpScope tAF

    $défaut  réduction par utilisation de la règle 38 ($@3)

    $@3  aller à l'état 55


État 42

   33 FonctionMainDec: tINT tMAIN tPO tPF $@2 Scope .

    $défaut  réduction par utilisation de la règle 33 (FonctionMainDec)


État 43

   34 FonctionIntDec: tINT tID tPO Args tPF Scope .

    $défaut  réduction par utilisation de la règle 34 (FonctionIntDec)


État 44

   36 FonctionFloatDec: tFLOAT tID tPO Args tPF Scope .

    $défaut  réduction par utilisation de la règle 36 (FonctionFloatDec)


État 45

   35 FonctionVoidDec: tVOID tID tPO Args tPF Scope .

    $défaut  réduction par utilisation de la règle 35 (FonctionVoidDec)


État 46

   21 Maths: Maths tEGALEGAL . Maths

    tNB_INT  décalage et aller à l'état 38
    tID      décalage et aller à l'état 39

    Maths  aller à l'état 56


État 47

   22 Maths: Maths tLSL . Maths

    tNB_INT  décalage et aller à l'état 38
    tID      décalage et aller à l'état 39

    Maths  aller à l'état 57


État 48

   23 Maths: Maths tLSR . Maths

    tNB_INT  décalage et aller à l'état 38
    tID      décalage et aller à l'état 39

    Maths  aller à l'état 58


État 49

   15 Maths: Maths tSOU . Maths

    tNB_INT  décalage et aller à l'état 38
    tID      décalage et aller à l'état 39

    Maths  aller à l'état 59


État 50

   14 Maths: Maths tADD . Maths

    tNB_INT  décalage et aller à l'état 38
    tID      décalage et aller à l'état 39

    Maths  aller à l'état 60


État 51

   16 Maths: Maths tMUL . Maths
   18      | Maths tMUL . Maths

    tNB_INT  décalage et aller à l'état 38
    tID      décalage et aller à l'état 39

    Maths  aller à l'état 61


État 52

   17 Maths: Maths tXOR . Maths

    tNB_INT  décalage et aller à l'état 38
    tID      décalage et aller à l'état 39

    Maths  aller à l'état 62


État 53

   19 Maths: Maths tAND . Maths

    tNB_INT  décalage et aller à l'état 38
    tID      décalage et aller à l'état 39

    Maths  aller à l'état 63


État 54

   20 Maths: Maths tOR . Maths

    tNB_INT  décalage et aller à l'état 38
    tID      décalage et aller à l'état 39

    Maths  aller à l'état 64


État 55

   39 Scope: tAO $@3 . CorpScope tAF

    tPRINT  décalage et aller à l'état 65
    tINT    décalage et aller à l'état 66
    tFLOAT  décalage et aller à l'état 67
    tVOID   décalage et aller à l'état 68
    tAO     décalage et aller à l'état 41
    tID     décalage et aller à l'état 69

    tPRINT    [réduction par utilisation de la règle 51 (While)]
    tPRINT    [réduction par utilisation de la règle 52 (If)]
    tPRINT    [réduction par utilisation de la règle 53 (For)]
    tINT      [réduction par utilisation de la règle 51 (While)]
    tINT      [réduction par utilisation de la règle 52 (If)]
    tINT      [réduction par utilisation de la règle 53 (For)]
    tFLOAT    [réduction par utilisation de la règle 51 (While)]
    tFLOAT    [réduction par utilisation de la règle 52 (If)]
    tFLOAT    [réduction par utilisation de la règle 53 (For)]
    tVOID     [réduction par utilisation de la règle 51 (While)]
    tVOID     [réduction par utilisation de la règle 52 (If)]
    tVOID     [réduction par utilisation de la règle 53 (For)]
    tAO       [réduction par utilisation de la règle 51 (While)]
    tAO       [réduction par utilisation de la règle 52 (If)]
    tAO       [réduction par utilisation de la règle 53 (For)]
    tAF       réduction par utilisation de la règle 51 (While)
    tAF       [réduction par utilisation de la règle 52 (If)]
    tAF       [réduction par utilisation de la règle 53 (For)]
    tID       [réduction par utilisation de la règle 51 (While)]
    tID       [réduction par utilisation de la règle 52 (If)]
    tID       [réduction par utilisation de la règle 53 (For)]
    $défaut  réduction par utilisation de la règle 51 (While)

    Type         aller à l'état 6
    VarDec       aller à l'état 70
    Affectation  aller à l'état 71
    Print        aller à l'état 72
    PlusEgal     aller à l'état 73
    MoinsEgal    aller à l'état 74
    Scope        aller à l'état 75
    CorpScope    aller à l'état 76
    CorpElem     aller à l'état 77
    While        aller à l'état 78
    If           aller à l'état 79
    For          aller à l'état 80


État 56

   14 Maths: Maths . tADD Maths
   15      | Maths . tSOU Maths
   16      | Maths . tMUL Maths
   17      | Maths . tXOR Maths
   18      | Maths . tMUL Maths
   19      | Maths . tAND Maths
   20      | Maths . tOR Maths
   21      | Maths . tEGALEGAL Maths
   21      | Maths tEGALEGAL Maths .
   22      | Maths . tLSL Maths
   23      | Maths . tLSR Maths

    tEGALEGAL  décalage et aller à l'état 46
    tLSL       décalage et aller à l'état 47
    tLSR       décalage et aller à l'état 48
    tSOU       décalage et aller à l'état 49
    tADD       décalage et aller à l'état 50
    tMUL       décalage et aller à l'état 51
    tXOR       décalage et aller à l'état 52
    tAND       décalage et aller à l'état 53
    tOR        décalage et aller à l'état 54

    tEGALEGAL  [réduction par utilisation de la règle 21 (Maths)]
    tLSL       [réduction par utilisation de la règle 21 (Maths)]
    tLSR       [réduction par utilisation de la règle 21 (Maths)]
    tSOU       [réduction par utilisation de la règle 21 (Maths)]
    tADD       [réduction par utilisation de la règle 21 (Maths)]
    tMUL       [réduction par utilisation de la règle 21 (Maths)]
    tXOR       [réduction par utilisation de la règle 21 (Maths)]
    tAND       [réduction par utilisation de la règle 21 (Maths)]
    tOR        [réduction par utilisation de la règle 21 (Maths)]
    $défaut   réduction par utilisation de la règle 21 (Maths)


État 57

   14 Maths: Maths . tADD Maths
   15      | Maths . tSOU Maths
   16      | Maths . tMUL Maths
   17      | Maths . tXOR Maths
   18      | Maths . tMUL Maths
   19      | Maths . tAND Maths
   20      | Maths . tOR Maths
   21      | Maths . tEGALEGAL Maths
   22      | Maths . tLSL Maths
   22      | Maths tLSL Maths .
   23      | Maths . tLSR Maths

    tEGALEGAL  décalage et aller à l'état 46
    tLSL       décalage et aller à l'état 47
    tLSR       décalage et aller à l'état 48
    tSOU       décalage et aller à l'état 49
    tADD       décalage et aller à l'état 50
    tMUL       décalage et aller à l'état 51
    tXOR       décalage et aller à l'état 52
    tAND       décalage et aller à l'état 53
    tOR        décalage et aller à l'état 54

    tEGALEGAL  [réduction par utilisation de la règle 22 (Maths)]
    tLSL       [réduction par utilisation de la règle 22 (Maths)]
    tLSR       [réduction par utilisation de la règle 22 (Maths)]
    tSOU       [réduction par utilisation de la règle 22 (Maths)]
    tADD       [réduction par utilisation de la règle 22 (Maths)]
    tMUL       [réduction par utilisation de la règle 22 (Maths)]
    tXOR       [réduction par utilisation de la règle 22 (Maths)]
    tAND       [réduction par utilisation de la règle 22 (Maths)]
    tOR        [réduction par utilisation de la règle 22 (Maths)]
    $défaut   réduction par utilisation de la règle 22 (Maths)


État 58

   14 Maths: Maths . tADD Maths
   15      | Maths . tSOU Maths
   16      | Maths . tMUL Maths
   17      | Maths . tXOR Maths
   18      | Maths . tMUL Maths
   19      | Maths . tAND Maths
   20      | Maths . tOR Maths
   21      | Maths . tEGALEGAL Maths
   22      | Maths . tLSL Maths
   23      | Maths . tLSR Maths
   23      | Maths tLSR Maths .

    tEGALEGAL  décalage et aller à l'état 46
    tLSL       décalage et aller à l'état 47
    tLSR       décalage et aller à l'état 48
    tSOU       décalage et aller à l'état 49
    tADD       décalage et aller à l'état 50
    tMUL       décalage et aller à l'état 51
    tXOR       décalage et aller à l'état 52
    tAND       décalage et aller à l'état 53
    tOR        décalage et aller à l'état 54

    tEGALEGAL  [réduction par utilisation de la règle 23 (Maths)]
    tLSL       [réduction par utilisation de la règle 23 (Maths)]
    tLSR       [réduction par utilisation de la règle 23 (Maths)]
    tSOU       [réduction par utilisation de la règle 23 (Maths)]
    tADD       [réduction par utilisation de la règle 23 (Maths)]
    tMUL       [réduction par utilisation de la règle 23 (Maths)]
    tXOR       [réduction par utilisation de la règle 23 (Maths)]
    tAND       [réduction par utilisation de la règle 23 (Maths)]
    tOR        [réduction par utilisation de la règle 23 (Maths)]
    $défaut   réduction par utilisation de la règle 23 (Maths)


État 59

   14 Maths: Maths . tADD Maths
   15      | Maths . tSOU Maths
   15      | Maths tSOU Maths .
   16      | Maths . tMUL Maths
   17      | Maths . tXOR Maths
   18      | Maths . tMUL Maths
   19      | Maths . tAND Maths
   20      | Maths . tOR Maths
   21      | Maths . tEGALEGAL Maths
   22      | Maths . tLSL Maths
   23      | Maths . tLSR Maths

    tEGALEGAL  décalage et aller à l'état 46
    tLSL       décalage et aller à l'état 47
    tLSR       décalage et aller à l'état 48
    tSOU       décalage et aller à l'état 49
    tADD       décalage et aller à l'état 50
    tMUL       décalage et aller à l'état 51
    tXOR       décalage et aller à l'état 52
    tAND       décalage et aller à l'état 53
    tOR        décalage et aller à l'état 54

    tEGALEGAL  [réduction par utilisation de la règle 15 (Maths)]
    tLSL       [réduction par utilisation de la règle 15 (Maths)]
    tLSR       [réduction par utilisation de la règle 15 (Maths)]
    tSOU       [réduction par utilisation de la règle 15 (Maths)]
    tADD       [réduction par utilisation de la règle 15 (Maths)]
    tMUL       [réduction par utilisation de la règle 15 (Maths)]
    tXOR       [réduction par utilisation de la règle 15 (Maths)]
    tAND       [réduction par utilisation de la règle 15 (Maths)]
    tOR        [réduction par utilisation de la règle 15 (Maths)]
    $défaut   réduction par utilisation de la règle 15 (Maths)


État 60

   14 Maths: Maths . tADD Maths
   14      | Maths tADD Maths .
   15      | Maths . tSOU Maths
   16      | Maths . tMUL Maths
   17      | Maths . tXOR Maths
   18      | Maths . tMUL Maths
   19      | Maths . tAND Maths
   20      | Maths . tOR Maths
   21      | Maths . tEGALEGAL Maths
   22      | Maths . tLSL Maths
   23      | Maths . tLSR Maths

    tEGALEGAL  décalage et aller à l'état 46
    tLSL       décalage et aller à l'état 47
    tLSR       décalage et aller à l'état 48
    tSOU       décalage et aller à l'état 49
    tADD       décalage et aller à l'état 50
    tMUL       décalage et aller à l'état 51
    tXOR       décalage et aller à l'état 52
    tAND       décalage et aller à l'état 53
    tOR        décalage et aller à l'état 54

    tEGALEGAL  [réduction par utilisation de la règle 14 (Maths)]
    tLSL       [réduction par utilisation de la règle 14 (Maths)]
    tLSR       [réduction par utilisation de la règle 14 (Maths)]
    tSOU       [réduction par utilisation de la règle 14 (Maths)]
    tADD       [réduction par utilisation de la règle 14 (Maths)]
    tMUL       [réduction par utilisation de la règle 14 (Maths)]
    tXOR       [réduction par utilisation de la règle 14 (Maths)]
    tAND       [réduction par utilisation de la règle 14 (Maths)]
    tOR        [réduction par utilisation de la règle 14 (Maths)]
    $défaut   réduction par utilisation de la règle 14 (Maths)


État 61

   14 Maths: Maths . tADD Maths
   15      | Maths . tSOU Maths
   16      | Maths . tMUL Maths
   16      | Maths tMUL Maths .
   17      | Maths . tXOR Maths
   18      | Maths . tMUL Maths
   18      | Maths tMUL Maths .
   19      | Maths . tAND Maths
   20      | Maths . tOR Maths
   21      | Maths . tEGALEGAL Maths
   22      | Maths . tLSL Maths
   23      | Maths . tLSR Maths

    tEGALEGAL  décalage et aller à l'état 46
    tLSL       décalage et aller à l'état 47
    tLSR       décalage et aller à l'état 48
    tSOU       décalage et aller à l'état 49
    tADD       décalage et aller à l'état 50
    tMUL       décalage et aller à l'état 51
    tXOR       décalage et aller à l'état 52
    tAND       décalage et aller à l'état 53
    tOR        décalage et aller à l'état 54

    tEGALEGAL  [réduction par utilisation de la règle 16 (Maths)]
    tEGALEGAL  [réduction par utilisation de la règle 18 (Maths)]
    tLSL       [réduction par utilisation de la règle 16 (Maths)]
    tLSL       [réduction par utilisation de la règle 18 (Maths)]
    tLSR       [réduction par utilisation de la règle 16 (Maths)]
    tLSR       [réduction par utilisation de la règle 18 (Maths)]
    tSOU       [réduction par utilisation de la règle 16 (Maths)]
    tSOU       [réduction par utilisation de la règle 18 (Maths)]
    tADD       [réduction par utilisation de la règle 16 (Maths)]
    tADD       [réduction par utilisation de la règle 18 (Maths)]
    tMUL       [réduction par utilisation de la règle 16 (Maths)]
    tMUL       [réduction par utilisation de la règle 18 (Maths)]
    tXOR       [réduction par utilisation de la règle 16 (Maths)]
    tXOR       [réduction par utilisation de la règle 18 (Maths)]
    tAND       [réduction par utilisation de la règle 16 (Maths)]
    tAND       [réduction par utilisation de la règle 18 (Maths)]
    tOR        [réduction par utilisation de la règle 16 (Maths)]
    tOR        [réduction par utilisation de la règle 18 (Maths)]
    tEOL       réduction par utilisation de la règle 16 (Maths)
    tEOL       [réduction par utilisation de la règle 18 (Maths)]
    tPF        réduction par utilisation de la règle 16 (Maths)
    tPF        [réduction par utilisation de la règle 18 (Maths)]
    $défaut   réduction par utilisation de la règle 16 (Maths)


État 62

   14 Maths: Maths . tADD Maths
   15      | Maths . tSOU Maths
   16      | Maths . tMUL Maths
   17      | Maths . tXOR Maths
   17      | Maths tXOR Maths .
   18      | Maths . tMUL Maths
   19      | Maths . tAND Maths
   20      | Maths . tOR Maths
   21      | Maths . tEGALEGAL Maths
   22      | Maths . tLSL Maths
   23      | Maths . tLSR Maths

    tEGALEGAL  décalage et aller à l'état 46
    tLSL       décalage et aller à l'état 47
    tLSR       décalage et aller à l'état 48
    tSOU       décalage et aller à l'état 49
    tADD       décalage et aller à l'état 50
    tMUL       décalage et aller à l'état 51
    tXOR       décalage et aller à l'état 52
    tAND       décalage et aller à l'état 53
    tOR        décalage et aller à l'état 54

    tEGALEGAL  [réduction par utilisation de la règle 17 (Maths)]
    tLSL       [réduction par utilisation de la règle 17 (Maths)]
    tLSR       [réduction par utilisation de la règle 17 (Maths)]
    tSOU       [réduction par utilisation de la règle 17 (Maths)]
    tADD       [réduction par utilisation de la règle 17 (Maths)]
    tMUL       [réduction par utilisation de la règle 17 (Maths)]
    tXOR       [réduction par utilisation de la règle 17 (Maths)]
    tAND       [réduction par utilisation de la règle 17 (Maths)]
    tOR        [réduction par utilisation de la règle 17 (Maths)]
    $défaut   réduction par utilisation de la règle 17 (Maths)


État 63

   14 Maths: Maths . tADD Maths
   15      | Maths . tSOU Maths
   16      | Maths . tMUL Maths
   17      | Maths . tXOR Maths
   18      | Maths . tMUL Maths
   19      | Maths . tAND Maths
   19      | Maths tAND Maths .
   20      | Maths . tOR Maths
   21      | Maths . tEGALEGAL Maths
   22      | Maths . tLSL Maths
   23      | Maths . tLSR Maths

    tEGALEGAL  décalage et aller à l'état 46
    tLSL       décalage et aller à l'état 47
    tLSR       décalage et aller à l'état 48
    tSOU       décalage et aller à l'état 49
    tADD       décalage et aller à l'état 50
    tMUL       décalage et aller à l'état 51
    tXOR       décalage et aller à l'état 52
    tAND       décalage et aller à l'état 53
    tOR        décalage et aller à l'état 54

    tEGALEGAL  [réduction par utilisation de la règle 19 (Maths)]
    tLSL       [réduction par utilisation de la règle 19 (Maths)]
    tLSR       [réduction par utilisation de la règle 19 (Maths)]
    tSOU       [réduction par utilisation de la règle 19 (Maths)]
    tADD       [réduction par utilisation de la règle 19 (Maths)]
    tMUL       [réduction par utilisation de la règle 19 (Maths)]
    tXOR       [réduction par utilisation de la règle 19 (Maths)]
    tAND       [réduction par utilisation de la règle 19 (Maths)]
    tOR        [réduction par utilisation de la règle 19 (Maths)]
    $défaut   réduction par utilisation de la règle 19 (Maths)


État 64

   14 Maths: Maths . tADD Maths
   15      | Maths . tSOU Maths
   16      | Maths . tMUL Maths
   17      | Maths . tXOR Maths
   18      | Maths . tMUL Maths
   19      | Maths . tAND Maths
   20      | Maths . tOR Maths
   20      | Maths tOR Maths .
   21      | Maths . tEGALEGAL Maths
   22      | Maths . tLSL Maths
   23      | Maths . tLSR Maths

    tEGALEGAL  décalage et aller à l'état 46
    tLSL       décalage et aller à l'état 47
    tLSR       décalage et aller à l'état 48
    tSOU       décalage et aller à l'état 49
    tADD       décalage et aller à l'état 50
    tMUL       décalage et aller à l'état 51
    tXOR       décalage et aller à l'état 52
    tAND       décalage et aller à l'état 53
    tOR        décalage et aller à l'état 54

    tEGALEGAL  [réduction par utilisation de la règle 20 (Maths)]
    tLSL       [réduction par utilisation de la règle 20 (Maths)]
    tLSR       [réduction par utilisation de la règle 20 (Maths)]
    tSOU       [réduction par utilisation de la règle 20 (Maths)]
    tADD       [réduction par utilisation de la règle 20 (Maths)]
    tMUL       [réduction par utilisation de la règle 20 (Maths)]
    tXOR       [réduction par utilisation de la règle 20 (Maths)]
    tAND       [réduction par utilisation de la règle 20 (Maths)]
    tOR        [réduction par utilisation de la règle 20 (Maths)]
    $défaut   réduction par utilisation de la règle 20 (Maths)


État 65

   25 Print: tPRINT . tPO Maths tPF tEOL

    tPO  décalage et aller à l'état 81


État 66

    5 Type: tINT .

    $défaut  réduction par utilisation de la règle 5 (Type)


État 67

    6 Type: tFLOAT .

    $défaut  réduction par utilisation de la règle 6 (Type)


État 68

    7 Type: tVOID .

    $défaut  réduction par utilisation de la règle 7 (Type)


État 69

   10 Affectation: tID . tASSIGN Operation tEOL
   26 PlusEgal: tID . tPLUSEGAL Maths tEOL
   27 MoinsEgal: tID . tMOINSEGAL Maths tEOL

    tPLUSEGAL   décalage et aller à l'état 82
    tMOINSEGAL  décalage et aller à l'état 83
    tASSIGN     décalage et aller à l'état 25


État 70

   42 CorpElem: VarDec .

    $défaut  réduction par utilisation de la règle 42 (CorpElem)


État 71

   46 CorpElem: Affectation .

    $défaut  réduction par utilisation de la règle 46 (CorpElem)


État 72

   50 CorpElem: Print .

    $défaut  réduction par utilisation de la règle 50 (CorpElem)


État 73

   47 CorpElem: PlusEgal .

    $défaut  réduction par utilisation de la règle 47 (CorpElem)


État 74

   48 CorpElem: MoinsEgal .

    $défaut  réduction par utilisation de la règle 48 (CorpElem)


État 75

   49 CorpElem: Scope .

    $défaut  réduction par utilisation de la règle 49 (CorpElem)


État 76

   39 Scope: tAO $@3 CorpScope . tAF
   41 CorpScope: CorpScope . CorpElem
